<resources>
    <string name="app_name">Seahawk Tours</string>
    <string name="title_activity_cis">CisActivity</string>
    <string name="location_button_text">Find Nearest Building</string>
    <string name="uncw_main_logo_description">UNCW logo in teal and blue</string>
    <string name="cis_building_front_image">Front view of the CIS building</string>
    <string name="welcome">Ready to learn more about your favorite UNCW buildings? Select a building from above and hit "Go"! Wings up!</string>
    <string name="uncw_logo">UNCW logo</string>
    <string name="learn_more_here">For more information\nclick here</string>
    <string name="default_building">Select a building</string>
    <string name="uncw_buildings_website">https://library.uncw.edu/archives_special/archives</string>
    <string name="joren_mcsorley">Joren McSorley</string>
    <string name="kinsley_sigmund">Kinsley Sigmund</string>
    <string name="home_button">a home button</string>
    <string name="uncw_buildings_website_text">UNCW building information and\nimages courtesy of the\nUNCW University Archives.</string>
    <string name="kinsley_picture">Kinsley picture</string>
    <string name="joren_picture">Joren picture</string>
    <string name="title_about_activity">About </string>
    <string name="created_by">Created by:</string>
    <string name="menu_share">Share</string>
    <string name="check_out_building">Check out\u0020</string>
    <string-array name="buildings">
        <item>Select a building</item>
        <item>Alderman Hall</item>
        <item>Bear Hall</item>
        <item>Belk Hall</item>
        <item>Computer Information Systems</item>
        <item>Trask Coliseum</item>
    </string-array>
    <string name="alderman_building"><big><b>Alderman Hall</b></big></string>
    <string name="alderman_caption">Alderman Hall circa 1970</string>
    <string name="alderman_description"><b>Building History</b>
        \n\nAlderman Hall was one of the three original buildings erected on campus along with James and Hoggard Halls. The building was occupied in 1961 and dedicated in June of 1970. The original function for this building, as administrative offices, is much the same as
        its current use. The first library for Wilmington College was located on the lower floor of Alderman Hall until the 1968 opening of Randall Library.
        \n\n
        <b>Namesake</b>
        \n\nIn 1861, Dr. Edwin Alderman was born in a house on 3rd Street in Wilmington near St. John\'s Episcopal Church. As a child he developed close ties with the Rev. Joseph Wilson and his son, future United States president, Woodrow Wilson.
        He graduated from Bethel Military Academy of Virginia in 1879 and went on to attend the University of North Carolina where he received his bachelor degree in 1882. He earned his DCL from University of the South in 1891. Among his recognitions were honorary awards,
        including LLDs from Tulane (1899), Johns Hopkins (1902) and Columbia (1905). He was a professor of pedagogy at the University of North Carolina and a professor of history and philosophy at Tulane University. He served as president at three southern universities;
        University of North Carolina, 6th president (1896-1900), Tulane University, 3rd president (1900-1904) and 1st president of University of Virginia (1904-1931). In 1924, Dr. Alderman delivered the memorial address to congress on President Wilson\'s death.
        Dedicated to his belief in education for all, this building was named to reflect a native of this area and his contributions to higher academics.
        \n</string>
    <string name="alderman_url">https://library.uncw.edu/web/collections/archives/bnl/7.html</string>
    <string name="bear_building"><big><b>Bear Hall</b></big></string>
    <string name="bear_caption">Bear Hall circa 1999</string>
    <string name="bear_description"><b>Building History</b>
        \n\nBear Hall opened at its present site in 1972 as the home for the Business and Economics Departments. Currently, the Departments of Computer Science, Mathematics &amp; Statistics, and Philosophy &amp; Religion occupy classrooms, teaching labs and faculty offices.
        The College of Arts and Science also resides here.
        \n\n
        <b>Namesake</b>
        \n\nAs the inscription on the plaque states Bear Hall is named for, "The original Isaac Bear Building, located at Market and 13th Streets, served as the first home of Wilmington College, outside the public school system. Classes were first held there in 1947."
        Constructed in 1912, the name of the first building was given by Samuel Bear, Jr. (1854-1916) as a memorial to his brother, Isaac Bear. The Bear family, owners of an intrastate wholesale dry goods firm located on Front Street, made a number of large donations to
        better the community such as a wing to James Walker Memorial Hospital. Isaac Bear was known as "one of Wilmington's most capable and highly esteemed businessmen." He was a member of North State Lodge of B\'Nai Brith, past Grand President of District Grand Lodge,
        and B.P.O.E Elks #532. Upon his death, the Isaac Bear Memorial School served to remember "the close friendship and devotion between the brothers and their interest in public welfare." The Order of the Isaac Bear is an honorary organization composed of faculty members
        that taught at the site of the original Wilmington College. Once the college built the new campus off of College Road, the Isaac Bear Building was torn down (1961).
        \n</string>
    <string name="bear_url">https://library.uncw.edu/web/collections/archives/bnl/19.html</string>
    <string name="belk_building"><big><b>Belk Hall</b></big></string>
    <string name="belk_caption">Belk Hall circa 2004</string>
    <string name="belk_description"><b>Building History</b>
        \n\nBelk Hall opened during the 1976-77 academic year. This residence hall, which accommodates 200 students, was the second dormitory on the UNC Wilmington campus.
        \n\n
        <b>Namesake</b>
        \n\nMrs. Mary Belk was the wife of Mr. William Henry Belk, who founded Belk Department Stores in 1888. Her son, Mr. Irwin Belk named this residence hall in honor of his mother, who was a schoolteacher. Mr. Irwin Belk, a 1945 graduate of
        University of North Carolina Chapel Hill, is a retired president of the Belk Group of Department Stores. He was also a member of the US Olympic Committee, served on the UNC Board of Governors and the President of the American Cancer Society for over 40 years.
        He was a North Carolina State Senator and a US Delegate to the 54th United Nations General Assembly. The Belk family has generously contributed to numerous schools within the UNC system.
        \n</string>
    <string name="belk_url">https://library.uncw.edu/web/collections/archives/bnl/28.html</string>
    <string name="cis_building"><big><b>Computer Information Systems</b></big></string>
    <string name="cis_caption">Computer Information Systems Building circa 2007</string>
    <string name="cis_description">
        <b>Building History</b>
        \n\nThe Computer Information Systems (CIS) building was constructed to house the Information Systems and Operations Management Department from the Cameron School of Business and the Department of Computer Science from the College of Arts &amp; Sciences.
        The CIS Building, a new 51,731 square-foot state-of-the-art facility on the UNCW campus, opened January 10, 2007 for the new school semester. Work on the facility began on July 29, 2004 with the groundbreaking, and competed in December of 2006.
        The building cost approximately $12.8 million and was funded by the North Carolina State Bond campaign of 2000.
        \n\nHoused within the new building is the Financial Markets Room and, thanks to a donation from Edward Jones and over 50 if its financial advisers, the Edward Jones Financial Lab. Both rooms contain a stock board and ticker, however the
        Edward Jones Financial Lab also includes the Bloomberg Trading Terminal. With this terminal, students and faculty have the ability to trade stocks directly with the New York Stock Exchange, NASDAQ and more.
        \n\nThe Department of Computer Science and the Department of Information Systems &amp; Operations Management are housed at CIS together and are jointly offering a Master of Science in Computer Science Information Systems (MSCSIS) degree,
        an intensive graduate program aimed at preparing the student to assume leadership roles in the development and implementation of computer and information systems.
        \n</string>
    <string name="cis_url">https://library.uncw.edu/web/collections/archives/bnl/cis.html</string>
    <string name="trask_building"><big><b>Trask Coliseum</b></big></string>
    <string name="trask_caption">Trask Coliseum circa 1983</string>
    <string name="trask_description">
        <b>Building History</b>
        \n\nFunding to construct a large sports venue on the University of North Carolina Wilmington campus began in 1974. Trask serves as the home for the Physical Education Department, natatorium, public performance arena, home court for Seahawk Sports as well as
        an intercollegiate venue. The building, dedicated in 1977, has been upgraded to include air conditioning, additional seating and handicap access over the past twenty-five years.
        \n\n<b>Namesake</b>
        \n\nMr. Raiford Trask, a New Hanover County native, developer and supporter of University athletics was known for his "loyalty and generosity." Along with his friends Dan Cameron and Richard Wetherill, Mr. Trask developed the Figure Eight Island area.
        He was also the builder and owner of Duck Haven Golf Course. He served on the Wrightsville Beach Town Council for four years and was mayor there for two. From 1952-1956, Mr. Trask was a member of the New Hanover County Board of Commissioners. He was on the
        Wilmington College Board of Trustees (1959-1969) during the move to the new campus location. Mr. Trask sold the college approximately 173 acres of land that the university now sits upon. He also donated fertilizer for the lawn of the new campus in 1961.
        It was with his avid support of athletics that lead to an early establishment of the college athletic program. Mr. Trask was a driving force in the capital fund raising for this facility which is duly named in his honor.
        \n\n<b>George Diab Sports Medicine Center</b>
        \n\nThe George Diab Sports Medicine Center opened in Trask Coliseum in 1993. It is named for Mr. George Diab and his wife, Kitty, who have made significant contributions to the sports medicine complex and supports Seahawks sports. Mr. Diab, a former
        semi-pro baseball player and affiliate of WWAY-TV station, was one of the five original members of the Seahawk Club. He helped organize their first fund raising activity. Mr. Diab has been a member of the Seahawk Board of Directors for the past
        thirty years and was president from 1987-1988.
        \n\n<b>Rountree - Jones Basketball Complex</b>
        \n\nNamed for local attorney, George Rountree III and former Wilmington Mayor, David Jones, the Rountree-Jones Complex is the modern locker room for the men\'s varsity basketball team. Mr. Rountree, a Wilmington native, earned his law degree from the
        University of Arizona, where he a former basketball player. Mr. Jones, a local developer and businessman is a generous supporter of UNCW.
        \n</string>
    <string name="trask_url">https://library.uncw.edu/web/collections/archives/bnl/10.html\n</string>
</resources>